--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,6 +1,10 @@
 
+{{"get product by Id =====>"+ProductListById.name}}
+<br>
+<!-- 
 
 {{filter|filter}}
+
 
 <h3 *ngIf="!(NoDis==no) then thenBlock else elseBlock; " ></h3>
 
@@ -22,6 +26,7 @@
 
 <br><br>
 
+{{ProductList[0].Id}}
 
 <div class="row">
     <div class="col-lg-6">
@@ -138,4 +143,4 @@
 <h3>{{"product quentity:"+ProductList[0].quentity}}</h3>
 <img src={{ProductList[0].img}}> -->
 
-
+ -->
