--- a/src/app/products/products.component.scss
+++ b/src/app/products/products.component.scss
@@ -1,3 +1,10 @@
+
+ .productdiv{
+     margin-top: 20px;
+     margin: 20px;
+ }
+
+
 .button_style{
     background-color: rgb(89, 103, 116);
     color: antiquewhite;
