--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -25,3 +25,18 @@
     </tbody>
 </table>
 
+
+<div>
+    <input placeholder="serch" type="number" #serch>
+    <!-- {{getProductById(1)}} -->
+    {{"data "+getoneuser}}
+
+</div>
+
+    {{getuserId(2).id}}
+    {{getuserId(4).email}}
+    {{"data "+getoneuser}}
+
+
+
+
