--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -34,6 +34,10 @@
       <li><a routerLink="/product">Product</a></li>
       <li><a routerLink="/user">Users</a></li>
       <li><a routerLink="/post">Post</a></li>
+      <li><a routerLink="/login">Login</a></li>
+      <li><a routerLink="/register">Register</a></li>
+
+
       
 
     </ul>
