--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -13,6 +13,8 @@
     justify-content: space-evenly;
     align-items:center;
     list-style: none;
+    flex-wrap: wrap;
+    flex: 1 1 1rem;
 
 
 }
